# Sapi3D

./: .env.dev  .env.dev.example  .env.prod  .env.prod.example  .gitignore  DATABASE_IMPLEMENTATION.md  PRODUCTION_CHECKLIST.md  README.md  SCRIPTS_README.md  SECURITY_REMEDIATION_PLAN.md  backend-curls.md  backup.sh  docker-compose.base.yml  docker-compose.deployment.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.dev.example  env.prod.example  firstperson.html  logs_dev.sh  main.py  package-lock.json  package.json  restore.sh  run_dev.sh  run_mobile_dev.sh  run_prod.sh  start.sh  stop_dev.sh  stop_mobile_dev.sh  stop_prod.sh  tasks.md
backend/: Dockerfile  main.py  pyproject.toml  run_test.sh  seed_achievements.py
backend/app/: main.py  seed_events.json  seed_info_panels.json  seed_info_panels.py
backend/app/core/: config.py  database.py  device.py  logging.py  security.py
backend/app/models/: achievement.py  base.py  chat.py  location.py  metrics.py  session.py  user.py
backend/app/repositories/: achievement_repository.py  admin_repository.py  base.py  chat_repository.py  events_repository.py  info_panels_repository.py  locations_repository.py  metrics_repository.py  session_repository.py  user_repository.py
backend/app/schemas/: __init__.py  achievement.py  admin.py  avatar.py  location.py  metrics.py  model.py  session.py  user.py
backend/app/service/: user_service.py
backend/app/services/: achievement_service.py  auth_service.py  email_service.py  events_service.py  info_panels_service.py  (+3 more)
backend/tests/: test_example.py
(+129 files in other folders)
