[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sapi3d-backend"
version = "0.1.0"
description = "FastAPI backend for Sapi3D application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
