[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sapi3d-backend"
version = "0.1.0"
description = "FastAPI backend for Sapi3D application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",
    "pytest>=7.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=1.2.0",
    "user-agents>=2.2.0",
    "jinja2>=3.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
